--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ tomli = "^2.2.1"
 pandas = "^2.2.3"
 python-slugify = "^8.0.4"
 bs4 = "^0.0.2"
+requests = "^2.32.3"
 
 
 [tool.poetry.group.dev.dependencies]
