--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ xarray = "^2025.3.1"
 matplotlib = "^3.10.1"
 pyyaml = "^6.0.2"
 tomli-w = "^1.2.0"
+tabulate = "^0.9.0"
 
 
 [tool.poetry.group.dev.dependencies]
