--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ matplotlib = "^3.10.1"
 pyyaml = "^6.0.2"
 tomli-w = "^1.2.0"
 tabulate = "^0.9.0"
+pytube = "^15.0.0"
+moviepy = "^2.1.2"
 
 
 [tool.poetry.group.dev.dependencies]
